--- a/P2/team-builder-v2/src/app/app.component.html
+++ b/P2/team-builder-v2/src/app/app.component.html
@@ -1,28 +1,7 @@
 <html>
 
 <h1>{{title}}</h1>
-<mat-tab-group >
-        <mat-tab label="Home">
-            <div id="tabs">
-               Link a: <a routerLink="/home-component"><button class="btn">Home</button></a>
-            </div>
-        </mat-tab>
-        <mat-tab label="Dashboard">
-            <div id = "tabs">
-          Link a: <a routerLink="/dashboard"><button class="btn">Dashboard</button></a>
-        </div>
-        </mat-tab>
-        <mat-tab label="Players">
-            <div id="tabs">
-                Link a:<a routerLink="/players"><button class="btn">Players</button></a> 
-        </div>
-        </mat-tab>
-        <mat-tab>
-             <div id="psearch">
-                        <app-player-search></app-player-search>
-                        </div>
-        </mat-tab>
-      </mat-tab-group>
+
 <!--<nav>
     <div class="n">
      <a routerLink="/home-component">Home</a> 
@@ -36,13 +15,18 @@
 
 <nav mat-tab-nav-bar>
     <a mat-tab-link
-       [routerLink]="home-component"
-    >home
+       routerLink="home-component"
+    >Home
     </a>
     <a mat-tab-link
-       [routerLink]="players"
-    >players
+       routerLink="dashboard"
+    >Dashboard
     </a>
+    <a mat-tab-link
+       routerLink="players"
+    >Players
+    </a>
+    <app-player-search></app-player-search>
   </nav>
 
 <router-outlet></router-outlet>
