--- a/P2/team-builder-v2/src/app/player-add/player-add.component.html
+++ b/P2/team-builder-v2/src/app/player-add/player-add.component.html
@@ -2,43 +2,30 @@
 
    <div id="bg">
 
-  <div class="add1"> <label  >Player name:
-      <input type="text" #playerName id="playerN" maxlength="16" placeholder="nombre" required ng-pattern="/^[a-zA-Z]*$/"/>
+    <form novalidate (ngSubmit)="onSubmit()"  [formGroup]="user">
+
+  <div class="add1"> <label>Player name:
+      <input type="text" #playerName id="playerN" formControlName="name1"/>
     </label>
   </div>
       
         <div class="add2">
     <label>Player dorsal:
-            <input type="number" #playerDorsal id="playerD" minlength="1" maxlenght="2" placeholder="dorsal" required/>
+            <input type="number" #playerDorsal id="playerD" formControlName="name2"/>
           </label>
           </div>
 
-
-<!--<table class="add3" >
-  <tr >
-    <td>Player position: </td>
-      <td> 
-        <form>
-         <input type="radio" value="Portero" id="playerP" [(ngModel)]="Position"> Portero <br>
-          <input type="radio" value="Defensa" id="playerP"   [(ngModel)]="Position"> Defensa <br>
-          <input type="radio" value="Medio" id="playerP"   [(ngModel)]="Position"> Medio <br>
-          <input type="radio" value="Delantero" id="playerP"  [(ngModel)]="Position"> Delantero<br>
-          </form>
-  </td>
-        </tr>
-</table>-->
-
-<mat-radio-group name="opciones" [(ngModel)]="operacionSeleccionada">
-  Posicion: 
-  <mat-radio-button class="radio" *ngFor="let op of tipoOperaciones" name="opciones" [value]="op"  style="margin: 10px">
+<mat-radio-group name="opciones" [(ngModel)]="operacionSeleccionada" formControlName="radios">
+  Posicion:
+  <mat-radio-button class="radio" *ngFor="let op of tipoOperaciones" name="opciones" [value]="op"  style="margin: 10px" >
     {{op}}
   </mat-radio-button>
 </mat-radio-group>
 
 <div>
-    <button mat-raised-button color="primary" (click)="operar()" (click)="add(playerName.value, playerDorsal.value)">add player</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="user.invalid" (click)="operar(); add(playerName.value, playerDorsal.value)">add player</button>
       <button (click)="goBack()">go back</button>
 </div>
+</form>
 </div>
-<!-- add(playerDorsal.value); playerDorsal.value='', 
-    add(playerPosition.value); playerPosition.value=''" -->
+
