--- a/P2/team-builder-v2/src/app/app.component.css
+++ b/P2/team-builder-v2/src/app/app.component.css
@@ -1,41 +1,32 @@
 /* AppComponent's private CSS styles */
 h1 {
-    font-size: 1.2em;
+    font-size: 200%;
     margin-bottom: 0;
   }
-  h2 {
-    font-size: 2em;
-    margin-top: 0;
-    padding-top: 0;
-  }
+
   nav a {
     padding: 5px 10px;
     text-decoration: none;
     margin-top: 15px;
     display: inline-block;
-
+    padding-top: 0.75%;
     border-radius: 4px;
     margin-bottom: 1%;
+    background: #92cdbc;
   }
   nav a:visited, a:link {
-    color: #2d4550;
+    color: #2a3a36;
   }
   nav a:hover {
-    color: #FFCC00;
-
+    color: #ff02dd;
+    background: greenyellow;
   }
   nav a.active {
     color: #039be5;
   }
 
   .footer{
-    margin-bottom: 0%;
-  }
-
-  #psearch{
-
-    background: yellow;
-
+    margin-top: auto;
   }
 
   .n{
@@ -45,7 +36,7 @@ h1 {
   html{
     margin-right: 1.5%;
     margin-left: 1.5%;
-    margin-bottom: -13%;
+    margin-bottom: auto;
   }
   .btn{
     background: #369;
@@ -57,3 +48,9 @@ h1 {
     width: auto;
     height: auto;
   }
+
+  .playerS{
+    padding-left: 3%;
+    color: #2a3a36;
+  }
+
