--- a/P2/team-builder-v2/src/app/home-component/home-component.component.html
+++ b/P2/team-builder-v2/src/app/home-component/home-component.component.html
@@ -1,6 +1,11 @@
-<h1>Acerca de este proyecto...</h1>
+<div id="margen">
+    <h1>Acerca de este proyecto...</h1>
 
 <p class="texto">
- proyecto <br>
-   proyectiyo
+    &nbsp;  Este proyecto es una demostración de una página web en angular que tiene como fin permitirte crear tu propio equipo de jugadores <br>
+   de fútbol, con algunos precargados, mostrando en el dashboard los primeros 8 y en el player puedes ver los que hay o crear otro. <br><br>
+   Por otro lado, al darle click sobre un jugador te llevara a sus detalles donde puedes cambiar o confirmar su información, además de <br>
+   un diseño agradable a la vista tiene una barra de busqueda del jugador por nombre y dorsal y al lado de esa búsqueda <br>
+   tienes las pestañas para cambiar entre páginas.
 </p>
+</div>
