--- a/P2/team-builder-v2/src/app/dashboard/dashboard.component.html
+++ b/P2/team-builder-v2/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
-<h3>Top Players</h3>
+<div id="margen">
+  <h3 style="font-size: 250%; margin-bottom: 2%;"><strong>Top Players</strong></h3>
 <div class="grid grid-pad">
   <a *ngFor="let player of players" class="col-1-4"
         routerLink="/detail/{{player.id}}">
@@ -6,4 +7,5 @@
       <h4>{{player.name}}</h4>
     </div>
   </a>
+</div>
 </div>
