--- a/P2/team-builder-v2/src/app/footer/footer.component.css
+++ b/P2/team-builder-v2/src/app/footer/footer.component.css
@@ -1,14 +1,17 @@
 
 .divFooter{
-    background: #666666;
+    background: #7dafa1;
     margin-top: 6%;
-    position: inherit;
+    margin-left: -5%;
+    margin-right: -2%;
+    margin-bottom: 0%;
 }
 .info{
-width: 100%;
-height: 100%;
-margin: 0 auto;
 text-align: center;
+margin-top: auto;
+padding-top: 2%;
+padding-bottom: 2%;
+color: #3f5851;
 }
 
 .img{
