--- a/P2/team-builder-v2/src/app/player-add/player-add.component.css
+++ b/P2/team-builder-v2/src/app/player-add/player-add.component.css
@@ -1,40 +1,54 @@
 #playerN{
     list-style-position: inherit;
     margin-left: 1%;
-
 }
 
 #playerD{
     list-style-position: inherit;
 
     margin-left: 0.75%;
+}
 
+.error{
+    color: red;
+    text-align: center;
 }
 
 #bg{
-    background: #CCCCFF;
-    margin-right:46%;
+    background: #dbeaa7;
+    margin-right:42%;
     margin-top: 6%;
     color:black;
-   margin-left: 30%;
+   margin-left: 34%;
+   margin-bottom: 22%;
+
 }
 .add1{
     margin-left: 1.3%;
-    margin-top: 1%
+    margin-top: 1%;
+    color: #2a3a36;
 }
 .add2{
     margin-left: 1.3%;
     margin-bottom: 1%;
     margin-top: 1%;
+    color: #2a3a36;
 }
-.add3{
-    margin-left: 1.3%;
-    margin-bottom: 1%;
+
+#save{
+    background: #b6a7ea;
+    margin-left: 2%;
+    margin-top: 3%;
+    margin-bottom: 2%;
 }
 
 .radio{
-    background: rgb(243, 229, 36); /*fondo*/
-    color: rgb(0, 0, 0); /*letra*/
-
+    background: #eaa7ba; /*fondo*/
+    color: #2a3a36; /*letra*/
+    display: inline-flexbox;
 }
 
+.texto{
+margin-left:1.5%;
+color: #2a3a36;
+}
