--- a/P2/team-builder-v2/src/app/player-detail/player-detail.component.css
+++ b/P2/team-builder-v2/src/app/player-detail/player-detail.component.css
@@ -1,7 +1,28 @@
 .bg{
-    background: #CCCCFF;
+    background: #dbeaa7;
     margin-top: 6%;
     color:black;
     margin-left: 30%;
     margin-right:46%;
+    margin-bottom: 18%;
+}
+
+.add1{
+    color: #2a3a36;
+}
+.add2{
+
+    color: #2a3a36;
+}
+
+#save{
+    background: #b6a7ea;
+    margin-left: 2%;
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
+
+.error{
+    color: red;
+    text-align: center;
 }
