--- a/P2/team-builder-v2/src/styles.css
+++ b/P2/team-builder-v2/src/styles.css
@@ -1,11 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 h1 {
-    color: #369;
+    color: #2a3a36;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
   }
   h2, h3 {
-    color: #444;
+    color: #2a3a36;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
   }
@@ -20,5 +20,6 @@ h1 {
   * {
     font-family: Arial, Helvetica, sans-serif;
   }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html { height: auto; }
+
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; height: 100%; width: 100%;}
